--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,13 @@
 [versions]
 activityComposeVersion = "1.9.0"
 agp = "8.8.2"
+authKt = "3.1.4"
 bom = "3.1.4"
+bomVersion = "3.1.4"
 coilCompose = "2.4.0"
 composeShimmer = "1.3.1"
 firebaseBom = "33.14.0"
-gotrueKt = "1.3.2"
+supabase-kt = "3.1.4"
 kotlin = "2.0.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -20,25 +22,25 @@ material3 = "1.3.2"
 materialIconsExtended = "1.7.8"
 navigationCompose = "2.9.0"
 navigationRuntimeAndroid = "2.9.0"
-navigationComposeJvmstubs = "2.9.0"
-firebaseStorage = "21.0.2"
 composeMaterial = "1.4.1"
+postgrestKt = "3.1.4"
+realtimeKt = "3.1.4"
+gotrueKt = "1.3.2"
 
 [libraries]
+bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "bomVersion" }
+gotruekt = { module = "io.github.jan-tennert.supabase:gotrue-kt", version.ref = "gotrueKt" }
+auth-kt = { module = "io.github.jan-tennert.supabase:auth-kt", version.ref = "authKt" }
+postgrest-kt = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "postgrestKt" }
+realtime-kt = { module = "io.github.jan-tennert.supabase:realtime-kt", version.ref = "realtimeKt" }
 androidx-activity-compose-v190 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-auth-kt = { module = "io.github.jan-tennert.supabase:auth-kt" }
-bom = { module = "io.github.jan-tennert.supabase:bom", version.ref = "bom" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-gotrue-kt = { module = "io.github.jan-tennert.supabase:gotrue-kt", version.ref = "gotrueKt" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -53,13 +55,13 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-runtime-android = { group = "androidx.navigation", name = "navigation-runtime-android", version.ref = "navigationRuntimeAndroid" }
-androidx-navigation-compose-jvmstubs = { group = "androidx.navigation", name = "navigation-compose-jvmstubs", version.ref = "navigationComposeJvmstubs" }
-firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
-postgrest-kt = { module = "io.github.jan-tennert.supabase:postgrest-kt" }
-realtime-kt = { module = "io.github.jan-tennert.supabase:realtime-kt" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
+supabase-auth-kt = { module = "io.github.jan.supabase:auth-kt", version.ref = "supabase-kt" }
+supabase-bom = { module = "io.github.jan.supabase:bom", version.ref = "supabase-kt" }
+supabase-postgrest-kt = { module = "io.github.jan.supabase:postgrest-kt", version.ref = "supabase-kt" }
+supabase-realtime-kt = { module = "io.github.jan.supabase:realtime-kt", version.ref = "supabase-kt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
